<resources>
    <string name="app_name">VitalzApp</string>
    <string name="get_started">Get Started</string>
    <string name="vitalz_logo">vitalz logo</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="waiting_for_otp">Waiting For OTP</string>
    <string name="please_enter">Please Enter the Verification code</string>
    <string name="send_to_91">send to +91-</string>
    <string name="fake_mobile_number">9876543210</string>
    <string name="fake_opt">0</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="start_using_the_device">Start using the Device</string>
    <string name="add_device">Add Device</string>
    <string name="patient_details">Patient Details</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="patch_id">Patch ID</string>
    <string name="battery">Battery</string>
    <string name="connection">Connection</string>
    <string name="fake_patch_id">763635</string>
    <string name="fake_status">Active</string>
    <string name="fake_connection">Good</string>
    <string name="back_btn">back Btn</string>
    <string name="fake_time_left">243</string>
    <string name="fake_time_left_unit">hrs</string>
    <string name="remote_icon">remote icon</string>
    <string name="user_registration">User Registration</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="please_select_user">Please select User</string>
    <string name="random_images">random Images</string>
    <string name="hospital">Hospital</string>
    <string name="operative">Operative</string>
    <string name="patient">Patient</string>
    <string name="care_taker">Care Taker</string>
    <string name="height">Height</string>
    <string name="address">Address</string>
    <string name="photo">Photo</string>
    <string name="browse">browse</string>
    <string name="contact_number">Phone Number</string>
    <string name="doctor_contact_number">Doctor Contact Number</string>
    <string name="list_of_medications">List of Medications</string>
    <string name="add">Add</string>
    <string name="average">Average</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="bpm">BPM</string>
    <string name="weight">Weight</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="attending_doctor">Attending Doctor</string>
    <string name="submit">Submit</string>
    <string name="username">Username *</string>
    <string name="password">Password *</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="start_date">Start Date :</string>
    <string name="sample_startDate">Apr 2 2021</string>
    <string name="end_date">End Date :</string>
    <string name="sample_endDate">Apr 9, 2021</string>
    <string name="respiratory">Respiratory</string>
    <string name="sample_respiratory">25</string>
    <string name="sample_heart_rate">107</string>
    <string name="sample_bp">124/81</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="sample_temp">38.5</string>
    <string name="temperature">Temperature</string>
    <string name="oxygen_saturation">Oxygen Saturation</string>
    <string name="sample_weight">86 KG</string>
    <string name="sample_oxygen">94</string>
    <string name="posture">Posture</string>
    <string name="sample_posture">Straight</string>
    <string name="activity">Activity</string>
    <string name="sample_activity">200 Steps</string>
    <string name="hospitals">Hospitals</string>

    <string name="empty">Please enter Mobile Number</string>
    <string name="shortLength">Please enter 10 Digits</string>
    <string name="invalid">Please enter Valid Mobile Number</string>
    <string name="unknown">Please Contact Admin/Hospital</string>
    <string name="patients">Patients</string>
    <string name="sample_hospital">Yashoda Hospital</string>
    <string name="device_name">Device Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission_available">Location Permission available, Start Scanning…</string>
    <string name="location_permission_not_available">Location Permission not available, requesting…</string>
    <string name="location_permission_required">Location Permission required for Bluetooth Scanning…</string>
    <string name="location_permission_granted">Location Permission granted start Bluetooth Scanning…</string>
    <string name="location_permission_denied">Location Permission denied </string>

    <string name="dBm">dBm</string>
    <string name="id">ID :</string>
    <string name="mac">MAC :</string>
    <string name="fake_id">3278</string>
    <string name="sample_address">Alexander Road, Secunderabad, Telangana</string>
    <string name="sample_patient_name">Akash Kumar</string>
    <string name="sample_patient_age">54</string>
    <string name="sample_age">M</string>
    <string name="sample_patient_id">98765</string>
    <string name="sample_patient_hospital_address">Yashoda Hospital, Secunderabad, Telangana</string>
    <string name="notifications">Notifications</string>
    <string name="sample_notification_title">Notification Title</string>
    <string name="sample_date">12/04/2021 ,10:10 AM</string>
    <string name="search_hospital">Search Hospital</string>
    <string name="search_patient">Search Patient</string>
    <string name="no_records_found">Sorry! No Records Found</string>


    <!-- Ble Connection -->
    <string name="device_disconnected">Device Disconnected, Try again ?</string>
    <string name="ble_not_suppported">This device does not support Bluetooth, You cannot use the app</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="connection_loading">Connection Loading…</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unable_to_connect">Device disconnected</string>
    <string name="error_with_device">Error with bluetooth device</string>
    <string name="no_devices_found">No Devices Found</string>
    <string name="vitalz_health">VITALZ HEALTH</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="logout">Logout</string>

</resources>