<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_8">

    <TextView
        android:id="@+id/tv_patient_name"
        style="@style/viewSize"
        android:text="@string/sample_patient_name"
        android:layout_marginStart="@dimen/dp_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/button_blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_patient_age"
        style="@style/viewSize"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/sample_patient_age"
        android:textColor="@color/button_blue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/tv_patient_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_patient_sex"
        style="@style/viewSize"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/sample_age"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/button_blue"
        app:layout_constraintStart_toEndOf="@+id/tv_patient_age"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_id"
        style="@style/viewSize"
        android:text="@string/id"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_patient_name" />

    <TextView
        android:id="@+id/tv_patient_id"
        style="@style/viewSize"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/sample_patient_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
        app:layout_constraintStart_toEndOf="@id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_id" />

    <ImageView
        android:id="@+id/iv_location"
        style="@style/viewSize"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_patient_hospital_address"
        style="@style/viewSize"
        android:text="@string/sample_patient_hospital_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="@+id/iv_location"
        app:layout_constraintStart_toEndOf="@id/iv_location"
        app:layout_constraintTop_toTopOf="@+id/iv_location" />

    <View
        android:id="@+id/patient_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/button_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_location" />

</androidx.constraintlayout.widget.ConstraintLayout>
