<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/vitalz">

    <ImageView
        android:id="@+id/imageView_vitalz"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:contentDescription="@string/vitalz_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/ic_vitalz_logo" />

    <TextView
        android:id="@+id/tv_vitalz_health"
        style="@style/viewSize"
        android:gravity="center"
        android:text="@string/vitalz_health"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/dp_8"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView_vitalz"
        app:layout_constraintStart_toStartOf="@+id/imageView_vitalz"
        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz" />

    <EditText
        android:id="@+id/et_mobile_number"
        style="@style/etRequestOtp"
        android:text="7011187031"
        android:autofillHints="@string/enter_mobile_number"
        android:hint="@string/enter_mobile_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vitalz_health"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/response_msg"
        style="@style/viewSize"
        android:visibility="gone"
        android:text=""
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="@+id/et_mobile_number"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile_number" />

    <Button
        android:id="@+id/btn_request_otp"
        style="@style/button"
        android:text="@string/request_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/response_msg" />

</androidx.constraintlayout.widget.ConstraintLayout>
